[package]
name        = "rust-warpwallet"
version     = "0.1.0"
description = "Rust implementation warpwallet"
authors     = ["Indy Jones <indyjonesnl@gmail.com>"]
license     = "MIT"
homepage    = "https://github.com/mrfu2/rust-warpwallet"

[dependencies]
bitcoin = "0.10.0"
bytes = "0.4.6"
hex = "0.3.1"
rand = "0.4.2"
ring = "0.12.1"
rust-crypto = "0.2.35"
secp256k1 = "0.6.3"
sha2 = "0.7.0"
threadpool = "1.7.1"
time = "0.1.39"

[dependencies.xor]
git = "https://github.com/zummenix/xor-rs/"